# internal/rest/gettoken.go
@@ -10,9 +10,19 @@ import (
 	"github.com/golang-jwt/jwt"
 )
 
+// GetToken godoc
+// @Router /get-token [POST]
+// @Summary Checking token with Refresh Token
+// @Description This endpoint verifies token is active or not and generates new access token
+// @Tags User Auth Service
+// @Produce json
+// @Param request body models.GetTokenReq true "Access Token"
+// @Success 201 {object} Response{data=models.GetTokenRes}
+// @Failure 400 {object} Response{data}
+// @Failure 500 {object} Response{data}
 func GetToken(db *sql.DB) gin.HandlerFunc {
 	return func(ctx *gin.Context) {
-		var token models.SignInRes
+		var token models.GetTokenReq
 		if err := ctx.ShouldBindJSON(&token); err != nil {
 			ctx.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 			return
@@ -25,12 +35,12 @@ func GetToken(db *sql.DB) gin.HandlerFunc {
 			ctx.JSON(http.StatusBadRequest, gin.H{"error": "invalid refresh token"})
 			return
 		}
-
+		var response models.GetTokenRes
 		//Generate new Access Token
 		access_token_expiration := time.Now().Add(time.Hour * 24 * 7)
 
 		access_claims := jwt.MapClaims{
-			"client_id": token.ClientID,
+			"client_id": response.ClientID,
 			"exp":       access_token_expiration.Unix(),
 		}
 		access_token := jwt.NewWithClaims(jwt.SigningMethodHS256, access_claims)
@@ -46,11 +56,16 @@ func GetToken(db *sql.DB) gin.HandlerFunc {
 			ctx.JSON(http.StatusInternalServerError, gin.H{"error": "invalid refresh token"})
 			return
 		}
+
+		result := models.GetTokenRes{
+			SignInRes: models.SignInRes{
+				ClientID: "client_id",
+				AccessToken: access_token_str,
+				RefreshToken: token.RefreshToken,
+				Active: true,
+			},
+		}
 		// Return Tokens
-		ctx.JSON(http.StatusOK, gin.H{
-			"client_id":     token.ClientID,
-			"access_token":  access_token_str,
-			"refresh_token": token.RefreshToken,
-		})
+		ctx.JSON(http.StatusOK, result)
 	}
 }
